# get_weather

./: .gitignore  README.md  deploy.sh  docker-compose.yml
django/: Dockerfile  pyproject.toml
django/src/: pytest.ini
django/src/app/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
django/src/app/management/commands/: fill_db.py
django/src/app/migrations/: 0001_initial.py
django/src/app/templates/weather/: index.html  weather.html
django/src/weather/: env_settings.py  settings.py  urls.py
